# iiwa14_with_Azure_Kinect

./: README.md
azure-kinect-driver-ros2-humble/: CMakeLists.txt  README.md
azure-kinect-driver-ros2-humble/launch/: display.launch.py
azure-kinect-driver-ros2-humble/meshes/azure_kinect_dk/: Azure Kinect DK.dae  Azure Kinect DK.stl
azure-kinect-driver-ros2-humble/rviz/: display.rviz
azure-kinect-driver-ros2-humble/urdf/: azure_kinect.urdf.xacro
fri/: README.md
lbr_fri_ros2_stack/lbr_demos/lbr_demos_py/lbr_demos_py/: joint_trajectory_client.py
lbr_fri_ros2_stack/lbr_demos/lbr_moveit_cpp/: CMakeLists.txt  package.xml
lbr_fri_ros2_stack/lbr_demos/lbr_moveit_cpp/src/: hello_moveit.cpp
lbr_fri_ros2_stack/lbr_description/gazebo/: lbr_gazebo.xacro
lbr_fri_ros2_stack/lbr_description/meshes/iiwa14/collision/: link_ee.stl  (+1 more)
lbr_fri_ros2_stack/lbr_description/urdf/iiwa14/: iiwa14.xacro  iiwa14_description.xacro
lbr_fri_ros2_stack/lbr_moveit_config/iiwa14_moveit_config/: .setup_assistant
lbr_fri_ros2_stack/lbr_moveit_config/iiwa14_moveit_config/config/: iiwa14.srdf  moveit.rviz
lbr_fri_ros2_stack/lbr_moveit_config/iiwa14_moveit_config/launch/: moveit_rviz.launch.py  setup_assistant.launch.py
lbr_fri_ros2_stack/lbr_ros2_control/config/: lbr_controllers.yaml  lbr_system_parameters.yaml
lbr_fri_ros2_stack/lbr_ros2_control/include/lbr_ros2_control/: system_interface.hpp
vision_opencv/cv_bridge/: CMakeLists.txt  package.xml
vision_opencv/cv_bridge/launch/: face_detector.launch
vision_opencv/cv_bridge/src/: face_detector.py  image_converter.py
(+2 files in other folders)
